syntax = "proto2";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "options.proto";

message Inner {
    optional string opt_field = 1;
    optional string opt_field_with_option = 2 [(required) = true];
}

message AlwaysValid {
    optional string unused = 1;
}

message TestProto2 {
    required string req_field = 1;
    optional int64 opt_field = 2;
    optional int64 opt_field_with_option = 3 [(required) = true];
    optional bool opt_bool_with_option = 4 [(required) = true];
    repeated int64 repeated_field_with_option = 5 [(required) = true];

    required Inner req_msg = 6;
    optional Inner opt_msg = 7;
    optional Inner opt_msg_with_option = 8 [(required) = true];

    repeated Inner repeated_msg_with_option = 9 [(required) = true];
    repeated Inner repeated_msg = 10;
    repeated AlwaysValid repeated_valid_msg = 11 [(required) = true];
}
