syntax = "proto3";

package vertis.validation.test;

option java_package = "ru.yandex.vertis.protobuf.test";
option java_multiple_files = true;

import "options.proto";

message Mark {
    enum MarkType {
        UNSET = 0;

        CAR = 1;
        TRUCK = 2;
    }

    string code = 1;

    string russian_alias = 2 [(required) = true];
    bool some_required_bool = 3 [(required) = true];
    MarkType mark_type = 4 [(required) = true];
}

message RepeatedTestModel {
    repeated string primitives = 1 [(required) = true];
    repeated ModelWithOptionalMark.SomeOptionalMsg messages = 2 [(required) = true];
    repeated ModelWithOptionalMark.SomeOptionalMsg opt_messages = 3;
}

message ModelWithOptionalMark {
    message SomeOptionalMsg {
        string code = 1 [(required) = true];
        string title = 2;
    }

    message SomeRequiredMsg {
        string code = 1;
        string title = 2 [(required) = true];
    }

    string code = 1;

    Mark mark = 2;
    SomeOptionalMsg some_msg = 3;
    SomeRequiredMsg required_msg = 4 [(required) = true];

}
